# py-build

./: .gitignore  README.md  TODO  ci.py  pyproject.toml  requirements-dev.txt  setup.py  test.py
_build/: clean.py  dist.py  venv.py
py_build/: __init__.py  __main__.py  build.py  funcs.py  main.py
pywin_installer/: __init__.py  build.py
tests/: test_builder_classmethods.py  test_builder_integration.py  test_builder_methods.py  test_builder_states.py  test_funcs.py  test_module_build.py
tests/build_test/: test.py
