[tool.poetry]
name = "py-build"
version = "0.2.1"
description = "A package that can be used to create a build process"
authors = ["Cory Laughlin <corylcomposinger@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_build"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "^2.0.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
